# rpi-led-pc-audio

./: CMakeLists.txt  CMakePresets.json
include/: audio-processing.h  fft-leds.h  mainwindow.h  vis.h
src/: audio-processing.cpp  fft-leds.cpp  kfc.c  kiss_fft.c  kiss_fftnd.c  kiss_fftndr.c  kiss_fftr.c  mainwindow.cpp  pa_ringbuffer.c  vis.cpp
ui/: mainwindow.ui
